--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -28,7 +28,7 @@
 # directory at the root of the repository and any of its
 # subdirectories.
 # /build/logs/ @doctocat
-/test_folder/another folder/ @shuyangliUCB
+/test_folder/another_folder/ @shuyangliUCB
 
 # The `docs/*` pattern will match files like
 # `docs/getting-started.md` but not further nested files like
